--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
             android:name=".CameraActivity"
             android:exported="false" />
         <activity
+            android:name=".SectorsSettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SectorsSoundSettingsActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
