--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DiplomaAppModelTFlite"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/APIKey"/>
         <activity
             android:name=".CameraActivity"
             android:exported="false" />
