added travel ui and places autocompl

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-feature android:name="android.hardware.camera" android:required="true" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
 
     <application
         android:allowBackup="true"
@@ -50,6 +52,9 @@
             android:exported="false" />
         <activity
             android:name=".MapOnlyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TravelActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
